--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@
 
 body {
   background-color: rgb(255, 255, 255);
-  height: 100vh;
   display: flex;
   flex-direction: column;
 }
@@ -59,7 +58,7 @@ header ul {
 .primary-section {
   background-color: #1f2937;
   display: flex;
-  height: 500px;
+  height: 400px;
   justify-content: center;
   align-items: center;
 
@@ -102,5 +101,68 @@ header ul {
   & .imagem img {
     height: 300px;
     width: 600px;
+  }
+}
+
+.second-section {
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  flex-direction: column;
+  height: 500px;
+
+  .text {
+    color: #1f2937;
+    text-align: center;
+    padding: 48px;
+    font-size: 36px;
+    font-weight: 900;
+  }
+
+  .colors-cats {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 48px;
+
+    & .cats {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      width: 250px;
+      height: 250px;
+
+      & img {
+        border-radius: 16px;
+        border: 4px solid #3882f6;
+        width: 200px;
+        height: 200px;
+        object-fit: cover;
+
+        &:hover {
+          border: 4px solid #adccff;
+        }
+      }
+    }
+  }
+}
+
+.third-section {
+  background-color: #e5e7eb;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 400px;
+
+  & .text-one {
+    padding: 20px 120px 20px 120px;
+    font-size: 36px;
+    font-weight: 300;
+  }
+
+  & .text-two {
+    font-weight: 900;
+    text-align: end;
   }
 }
