--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: 0 200px 0 200px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
 
   & .logo {
     display: flex;
@@ -47,6 +51,7 @@ header ul {
   & li a {
     color: white;
     text-decoration: none;
+    font-weight: 900;
 
     &:hover {
       transition: 0.2s;
@@ -58,7 +63,7 @@ header ul {
 .primary-section {
   background-color: #1f2937;
   display: flex;
-  height: 400px;
+  height: 500px;
   justify-content: center;
   align-items: center;
 
@@ -85,11 +90,16 @@ header ul {
       background-color: #3882f6;
       color: white;
       width: 100px;
-      padding: 4px;
+      padding: 8px;
       border-radius: 8px;
       border: none;
       text-align: center;
       font-weight: 700;
+
+        & a {
+          text-decoration: none;
+          color: white;
+        }
 
       &:hover {
         transition: 0.2s;
@@ -108,7 +118,8 @@ header ul {
   background-color: rgb(255, 255, 255);
   display: flex;
   flex-direction: column;
-  height: 500px;
+  justify-content: center;
+  height: 600px;
 
   .text {
     color: #1f2937;
@@ -129,8 +140,8 @@ header ul {
       flex-direction: column;
       align-items: center;
       text-align: center;
-      width: 250px;
-      height: 250px;
+      width: 280px;
+      height: 280px;
 
       & img {
         border-radius: 16px;
@@ -143,6 +154,13 @@ header ul {
           border: 4px solid #adccff;
         }
       }
+
+      & .title {
+        font-weight: 700;
+      }
+      & .text-one {
+        padding: 4px 26px 4px 26px;
+      }
     }
   }
 }
@@ -153,8 +171,11 @@ header ul {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 400px;
+  height: 600px;
 
+  & .sub-section {
+    width: 1400px;
+  }
   & .text-one {
     padding: 20px 120px 20px 120px;
     font-size: 36px;
@@ -165,4 +186,60 @@ header ul {
     font-weight: 900;
     text-align: end;
   }
+}
+
+.fourth-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 500px;
+
+  & .sub-section {
+    background-color: #3882f6;
+    padding: 60px 60px 60px 60px;
+    border-radius: 16px;
+    width: 1200px;
+    display: flex;
+    justify-content: space-between;
+  }
+    & .text-one {
+      color: white;
+      font-weight: 900;
+    }
+
+    & .text-two {
+      color: white;
+    }
+
+    & .sign-up {
+      background-color: #3882f6;
+      color: white;
+      width: 100px;
+      padding: 4px;
+      border-radius: 8px;
+      border: 2px solid white;
+      text-align: center;
+      font-weight: 700;
+
+        & a {
+          text-decoration: none;
+          color: white;
+        }
+
+      &:hover {
+        transition: 0.2s;
+        background-color: #adccff;
+
+    }
+  }
+}
+
+footer {
+  background-color: #1f2937;
+  height: 120px;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
 }
